# tet

./: CNAME  README.md  compile_commands.json  index.html
.github/workflows/: deploy.yml
assets/: emscripten-module.browser-CQTyY9rm.js  ffi-DGtPOqi5.js  index-B6UX0R4s.js  index-CuGlkaG1.js  index-Cw6c2zvH.js  index-DFqGDcRD.js  index-DahEM-F4.js  index-DxQP2J6G.js  index-yf20TYz2.js  main-DWVQHuiT.css  main.js  module-HMQCEAUF-CYYojbOj.js  node-BXtA4rRl.js  node-C3EHfR3y.js  node-CADexRDB.js  node-DEuolp3B.js  node-DoAp5khL.js  node-KK9EKPtY.js  node-j-_Wzefk.js  web-krARMpMV.js  workerScript--7EviqTj.js  workerScript-8Msa98aE.js  workerScript-D2TSJi24.js  workerScript.js
fw/: .gitignore  CMakeLists.txt
fw/components/Exception/: CMakeLists.txt
fw/components/Exception/include/: Exception.hpp
fw/components/Logger/: CMakeLists.txt
fw/components/Logger/include/Logger/: Log.hpp
fw/components/MQTT/: CMakeLists.txt  MQTT.cpp
fw/components/MQTT/include/: MQTT.hpp  types.hpp
fw/components/Storage/: CMakeLists.txt  NVS.cpp
fw/components/Storage/include/: NVS.hpp
fw/components/Wireless/: CMakeLists.txt  NetIf.cpp  WiFi.cpp  idf_component.yml
fw/components/Wireless/include/: IP.hpp  Modem.hpp  NetIf.hpp  WiFi.hpp  mDNS.hpp
fw/components/eventpp/: CMakeLists.txt
fw/components/frozen/: CMakeLists.txt
fw/components/glaze/: CMakeLists.txt
fw/components/magic_enum/: CMakeLists.txt
fw/components/nlohmann_json/: CMakeLists.txt
fw/components/small_vectors/: CMakeLists.txt
fw/components/tet/: CMakeLists.txt
fw/components/tet/include/: tet.hpp
fw/components/tet/include/tet/: Argument.hpp  Client.hpp  Command.hpp  Event.hpp  State.hpp  StaticFunction.hpp  util.hpp
fw/examples/Host/: CMakeLists.txt
fw/examples/Host/main/: CMakeLists.txt  main.cpp
fw/examples/Lantern/: sdkconfig.defaults
fw/examples/Lantern/components/BlackBox/: .gitignore  CMakeLists.txt
fw/examples/Lantern/controller/: package-lock.json  package.json  tsconfig.json
fw/examples/Lantern/main/: HW.hpp  commands.hpp  events.hpp  main.cpp
fw/examples/Semafor/main/: definition.hpp  idf_component.yml  main.cpp  pinout.hpp
fw/examples/SemiSemafor/: CMakeLists.txt  sdkconfig.defaults
fw/examples/SemiSemafor/main/: HW.hpp  commands.hpp  events.hpp  main.cpp  pinout.hpp
fw/main/: CMakeLists.txt  fw.cpp  idf_component.yml
sw/: Dockerfile.server  eslint.config.js  package-lock.json  package.json  run-server.sh  testCode.js  tsconfig.build.json  tsconfig.json
sw/core/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
sw/core/src/: index.ts
sw/core/src/communication/: Client.ts  Device.ts  MQTTConnection.ts  MockConnection.ts  definitions.ts  index.ts
sw/core/src/errors/: index.ts
sw/core/src/game/: DeviceClass.ts  Game.ts  Type.ts  index.ts
sw/core/src/known_devices/: Lantern.tsx  MockButton.tsx  Semafor.tsx
sw/core/src/log/: index.ts  levels.ts
sw/core/src/runtime/: PropertyBuilder.ts  Runtime.ts  index.ts
sw/core/src/server/: Server.ts  ServerMessage.ts  WorkerMessage.ts  index.ts  workerScript.ts
sw/core/src/utils/: TinyJSONSchema.ts  TypedEventEmitter.ts  index.ts  io-tsUtils.ts
sw/core/src/worker/: base.ts  index.ts  node.ts  web.ts
sw/devices/: package.json  tsconfig.json
sw/devices/src/: Lantern.tsx  MockButton.tsx  Semafor.tsx  common.ts  index.ts  typeUtils.ts
sw/gui/: index.html  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.ts
sw/gui/src/: main.tsx
sw/gui/src/componets/: Main.tsx  NavBar.tsx  Sidebar.tsx
sw/gui/src/features/: store.ts
sw/gui/src/routes/: Root.tsx  index.tsx
sw/server/: docker-compose.yml  package.json  tsconfig.json
sw/server/mosquitto/: mosquitto.conf
sw/server/src/: index.ts
(+67 files in other folders)
